# SeonCore

./: .gitignore  CMakeLists.txt  LICENSE  br.sh
include/seoncore/concepts/: like_concept.hpp  matrix_like.hpp
include/seoncore/enums/: major.hpp  policy.hpp  sparse_type.hpp
include/seoncore/iterators/: iter_col.hpp  iter_dense.hpp  iter_row.hpp  iter_sparse.hpp  iter_stride.hpp
include/seoncore/matrix/: base.hpp  base_matrix.hpp  dense.hpp  dense_fwd.hpp  dense_matrix.hpp  dense_matrix_fwd.hpp  matrix.hpp  operators.hpp  seonarr.hpp  seonarr_fwd.hpp  sparse_matrix.hpp  vector.hpp  vector_fwd.hpp
include/seoncore/ops/: blas.hpp  dense_ops.hpp  matmul.hpp  reduce.hpp  tag_invoke.hpp  tag_invoke_fwd.hpp  transform.hpp
include/seoncore/views/: col.hpp  col_view.hpp  matrix_like.hpp  matrix_like_fwd.hpp  row.hpp  row_view.hpp  transposed.hpp  transposed_fwd.hpp  transposed_view.hpp  vec.hpp  vector_like.hpp  view_dmat.hpp  view_dvec.hpp  view_smat.hpp  view_svec.hpp  view_vec.hpp
src/: main.cpp
tests/: main_test.cpp
